tests/fail/break_out_of_for.tig
let
in
    for i := 1 to 10 do print("Hello, World!");
    break
end
