tests/fail/break_out_of_for.err
Semantic Error: break used out of a while or for statement at line 2.
